@@ -2,6 +2,7 @@ Escher CMS Change History
 =========================
 
 Changes Since Last Release
+	eliminated "meta" namespace and tags; added tag: <et:pages:meta name="">
 	form plugin: allow setting default values for multiple checkboxes ("default" attribute now accepts comma-delimited list)
 	added missing semicolons in some inline styles of sample site
 	eliminated one level of directory hierachy in sparkplug directory
